# KindleTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILING  Cargo.toml  Makefile  NOTICE.md  README.md  deny.toml  kindletool.1  package.nix  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  rust-ci.yml  scheduled-fuzz.yml
KindleTool/: convert.c  kindle_table.h  kindle_tool.c  kindle_tool.h  msvc_compat.c  msvc_compat.h
crates/kindletool/: Cargo.toml
crates/kindletool-cli/: Cargo.toml
crates/kindletool-cli/src/: args.rs  commands.rs  main.rs
crates/kindletool-cli/tests/: cli.rs  compatibility.rs  oracle.rs
crates/kindletool/src/: archive.rs  codec.rs  codec_tables.rs  crypto.rs  default_key.rs  device_catalog_data.rs  devices.rs  devices_generated.rs  error.rs  format.rs  key_generated.rs  lib.rs  model.rs  package.rs  report.rs  serial.rs  tables_generated.rs  values.rs  verification.rs
crates/kindletool/tests/: archive_verification.rs  component_verification.rs  corpus.rs  signature_verification.rs  v2_format_catalog.rs  v2_package.rs  v2_specs.rs  v2_values.rs
docs/: kindletool-json-v1.schema.json  migration-2.0.md  public-api-2.0.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: archive_path.rs  encoder_roundtrip.rs  manifest_verifier.rs  package_reader.rs  raw_archive.rs
rust/: .gitignore  Cargo.toml  NOTICE.md  README.md
rust/crates/kindletool-cli/: Cargo.toml
rust/crates/kindletool-cli/src/: args.rs  main.rs
rust/crates/kindletool-cli/tests/: oracle.rs
rust/crates/kindletool/src/: archive.rs  codec.rs  crypto.rs  devices_generated.rs  error.rs  key_generated.rs  lib.rs  model.rs  report.rs  serial.rs  tables_generated.rs
rust/fuzz/: Cargo.toml
rust/tools/: generate_legacy_tables.py
tools/: generate_legacy_tables.py  kindletool-static-build.sh  simple-linux-static-build.sh
tools/mingw/: kindletool-mingw-build.sh
