[workspace]
members = ["crates/kindletool", "crates/kindletool-cli"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "2.0.1"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["Yifan Lu", "NiLuJe", "KindleTool contributors"]
repository = "https://github.com/doyaGu/KindleTool"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
md-5 = "0.10.6"
proptest = "1.8.0"
rand = "0.8.5"
rsa = { version = "0.9.10", features = ["pem", "sha2"] }
sha2 = { version = "0.10.9", features = ["oid"] }
tar = "0.4.46"
tempfile = "3.23.0"
thiserror = "2.0.17"
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
