[package]
name = "kindletool"
description = "Safe, typed Kindle update package reader, writer, and archive library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
flate2.workspace = true
md-5.workspace = true
rsa.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
